# fortran-hls-main

./: .gitignore  .gitmodules  ExplorationProcess.md  LICENSE  README.md  build-flang.sh  build-llvm-project.sh  flang-llvm-install.sh  init-flang-llvm-install.sh  kernel_names.txt  makeclean.sh  pytest.py  set_path.sh  setup.py  setup.sh  setup_virtualenv.sh  setup_virtualenv.sh.backup  swapfifle.md  test.sh  test_gcc.cpp
Vitis_Platform_Creation/: VitisPlatformCreation.md
Vitis_Platform_Creation/Design_Tutorials/01-Edge-KV260/: step1.md
_x_test1/: v++_compile_test1_guidance.json  v++_compile_test1_guidance.pb
_x_test1/reports/test1/: v++_compile_test1_guidance.html
examples/tealeaf/cg_calc_w_kernel_norxy/: .gitignore  Makefile  host.c
examples/tealeaf/cg_calc_w_kernel_norxy/cpu/: baseline_cg_c_w_kernel_norxy.cpp  baseline_cg_c_w_kernel_norxy.f90  compile.sh  shift_register_calc_w_kernel_norxy.cpp  shift_register_calc_w_kernel_norxy.f90
examples/tealeaf/cg_calc_w_kernel_norxy/fpga/: Makefile  fpga_calc_w_kernel_norxy.cpp  fpga_calc_w_kernel_norxy.f90  header.hpp
examples/tealeaf/cg_calc_w_kernel_norxy/fpga_optimised/: 2d_cpu_shift_register_calc_w_kernel_norxy.f90  cpu_shift_register_calc_w_kernel_norxy.cpp  cpu_shift_register_calc_w_kernel_norxy.f90  fpga_calc_w_kernel_norxy.f90  header.hpp  shift_register_calc_w_kernel_norxy.cpp  shift_register_calc_w_kernel_norxy.f90
examples/tealeaf/ppcg_calc_rrn_kernel/: .gitignore  host.c
examples/tealeaf/ppcg_calc_rrn_kernel/cpu/: compile.sh  cpu_ppcg_calc_rrn_kernel.cpp  cpu_ppcg_calc_rrn_kernel.f90
fortran_hls/: __init__.py  command_line.py  compile_tealeaf.py  driver.py  exceptions.py  fortran_processor.py  fxx.py  llvm_ir_processor.py
fortran_hls.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
include/: hls_stream.h
llvm-passes-f18/: .gitignore  CMakeLists.txt
llvm-passes-f18/extract_subroutines/: CMakeLists.txt  extract_subroutines.cpp
llvm-passes-f18/set_pragma_metadata/: CMakeLists.txt  set_pragma_metadata.cpp
llvm-passes-f18/vxxdowngrader/: .gitignore  CMakeLists.txt  Makefile  SYCLUtils.cpp  VXXIRDowngrader.cpp
tests/: array_partition.f90  f_dataflow.f90  f_empty_stream.f90  f_full_stream.f90  pipe_test.f90  unrll_test.f90
tests/oracles/: array_partition.ll  f_dataflow.ll  f_empty_stream.ll  f_full_stream.ll  pipe_test.ll  unrll_test.ll
tmp/: pragma_code.f90
(+10 files in other folders)
